<resources>
    <string name="app_name">HC Demo UI</string>
    <string name="action_update">Update</string>
    <string name="app_title">High Contrast</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_challenges">Challenges</string>
    <string name="filter_card_header_1">Filter by:</string>
    <string name="filter_card_header_2">Sort by:</string>
    <string name="filter_card_newest">Newest</string>
    <string name="filter_card_oldest">Oldest</string>
    <string name="filter_card_completed">Completed</string>
    <string name="filter_card_uncompleted">Uncompleted</string>
    <string name="filter_card_difficulty_asc">Difficulty (asc)</string>
    <string name="filter_card_difficulty_desc">Difficulty (desc)</string>
    <string name="game_settings_title">Game Settings</string>
    <string name="challenge_info_title">Challenge Details</string>

    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="challenge_title_placeholder">Title goes here…</string>
    <string name="tab_bar_list_label">all</string>
    <string name="tab_bar_settings_label">settings</string>
    <string name="tab_bar_skip_label">skip</string>
    <string name="tab_bar_random_label">random</string>
    <string name="description_update">update challenges</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_description">Description</string>
    <string name="placeholder_group_size">1 – 2</string>
    <string name="placeholder_group_min">min: 1 player(s)</string>
    <string name="placeholder_group_max">max: 2 players</string>
    <string name="placeholder_help_and_feedback_text">Help and Feedback page goes here</string>
    <string name="description_loading_icon">loading data</string>
    <string name="initialising_app">Initialising app, please wait…</string>
    <string name="header_view_title">High Contrast</string>
    <string name="description_filter_tab">filter challenges</string>
    <string name="description_sort_tab">sort challenges</string>
    <string name="title_filter">Filter</string>
    <string name="title_sort">Sort</string>
    <string name="option_completed">Completed</string>
    <string name="option_uncompleted">Uncompleted</string>
    <string name="option_easy">Easy</string>
    <string name="option_medium">Medium</string>
    <string name="option_hard">Hard</string>
    <string name="option_insane">Insane</string>
    <string name="description_group_size">group size</string>
    <string name="description_difficulty">difficulty</string>
    <string name="header_difficulty">Difficulty</string>
    <string name="button_text_ok">OK</string>
    <string name="description_cancel_change">cancel change</string>
    <string name="description_play_challenge">play challenge</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed justo libero, semper id sem id, lacinia bibendum erat.</string>
    <string name="placeholder_difficulty">Difficulty:</string>
    <string name="placeholder_completed_true">Completed: Yeah</string>
    <string name="placeholder_completed_false">Completed: Nah</string>

</resources>
