<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <ImageView
        android:id="@+id/filter_icon_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_selector"
        android:clickable="true"
        android:contentDescription="@string/description_filter_tab"
        android:padding="10dp"
        android:src="@drawable/ic_filter_list_black_36dp" />

    <ImageView
        android:id="@+id/sort_icon_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/filter_icon_tab"
        android:layout_marginTop="1dp"
        android:background="@drawable/tab_selector"
        android:clickable="true"
        android:contentDescription="@string/description_sort_tab"
        android:padding="10dp"
        android:src="@drawable/ic_sort_black_36dp" />

    <LinearLayout
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:layout_toEndOf="@id/filter_icon_tab"
        android:layout_toRightOf="@id/filter_icon_tab"
        android:background="@drawable/tab_outline_selected"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/icon_card_header"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/title_filter"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/colorDivider" />

        <ScrollView
            android:id="@+id/filter_layout"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/filter_by_completed"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_completed"
                    android:textColor="@drawable/filter_button_selector" />

                <Button
                    android:id="@+id/filter_by_uncompleted"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_uncompleted"
                    android:textColor="@drawable/filter_button_selector" />

                <Button
                    android:id="@+id/filter_by_easy"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_easy"
                    android:textColor="@drawable/filter_button_selector" />

                <Button
                    android:id="@+id/filter_by_medium"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_medium"
                    android:textColor="@drawable/filter_button_selector" />

                <Button
                    android:id="@+id/filter_by_hard"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_hard"
                    android:textColor="@drawable/filter_button_selector" />

                <Button
                    android:id="@+id/filter_by_insane"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_insane"
                    android:textColor="@drawable/filter_button_selector" />
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/sort_layout"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/sort_by_newest"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_card_newest"
                    android:textColor="@android:color/holo_blue_light" />

                <Button
                    android:id="@+id/sort_by_oldest"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/filter_card_oldest"
                    android:textColor="@android:color/holo_blue_light" />

                <Button
                    android:id="@+id/sort_by_difficulty_asc"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_card_difficulty_asc"
                    android:textColor="@android:color/holo_blue_light" />

                <Button
                    android:id="@+id/sort_by_difficulty_desc"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_card_difficulty_desc"
                    android:textColor="@android:color/holo_blue_light" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>