<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@color/white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/challenge_play_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/confirmGreen"
        android:clickable="true"
        android:contentDescription="@string/description_play_challenge"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:src="@drawable/ic_play_arrow_white_18dp" />

    <RelativeLayout
        android:id="@+id/clickable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:minHeight="?attr/listPreferredItemHeightSmall"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp">

        <TextView
            android:id="@+id/item_group_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:drawableTop="@drawable/ic_person_black_24dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/placeholder_group_size"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/item_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@id/item_group_icon"
            android:layout_toStartOf="@id/item_group_icon"
            android:drawableEnd="@drawable/ic_done_green_24dp"
            android:drawableRight="@drawable/ic_done_green_24dp"
            android:gravity="bottom"
            android:padding="2dp"
            android:text="@string/placeholder_title"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_description_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/item_title_textview"
            android:layout_toLeftOf="@id/item_group_icon"
            android:layout_toStartOf="@id/item_group_icon"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:singleLine="true"
            android:text="@string/lorem_ipsum_short"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RelativeLayout
            android:id="@+id/item_expanded_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_description_textview"
            android:visibility="gone">

            <TextView
                android:id="@+id/item_min_textview"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:padding="3dp"
                android:text="@string/placeholder_group_min"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/item_max_textview"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/item_min_textview"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:padding="3dp"
                android:text="@string/placeholder_group_max"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/item_difficulty_textview"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:padding="3dp"
                android:text="@string/placeholder_difficulty"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/item_completed_textview"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/item_difficulty_textview"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:padding="3dp"
                android:text="@string/placeholder_completed"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
