<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:visibility="gone">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e4d0d0"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/filter_by_header"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/filter_card_header_1"
                android:textSize="18sp"
                android:clickable="true"/>

            <LinearLayout
                android:id="@+id/filter_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Completed"
                    android:textColor="@drawable/filter_button_selector"
                    style="?attr/buttonBarButtonStyle"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Uncompleted"
                    android:textColor="@drawable/filter_button_selector"
                    style="?attr/buttonBarButtonStyle"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Easy"
                    android:textSize="12sp"
                    android:textColor="@drawable/filter_button_selector"
                    style="?attr/buttonBarButtonStyle"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Medium"
                    android:textSize="12sp"
                    android:textColor="@drawable/filter_button_selector"
                    style="?attr/buttonBarButtonStyle"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Hard"
                    android:textSize="12sp"
                    android:textColor="@drawable/filter_button_selector"
                    style="?attr/buttonBarButtonStyle"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Insane"
                    android:textSize="12sp"
                    android:textColor="@drawable/filter_button_selector"
                    style="?attr/buttonBarButtonStyle"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#b3a0a0"
        android:layout_marginTop="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sort_by_header"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/filter_card_header_2"
                android:textSize="18sp"
                android:clickable="true"/>

            <LinearLayout
                android:id="@+id/sort_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <Button
                    android:id="@+id/filter_by_newest"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_card_newest"
                    android:textColor="@android:color/holo_blue_light" />

                <Button
                    android:id="@+id/filter_by_oldest"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_card_oldest"
                    android:textColor="@android:color/holo_blue_light" />

                <Button
                    android:id="@+id/filter_by_difficulty_eh"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Difficulty"
                    android:textColor="@android:color/holo_blue_light"
                    android:drawableRight="@drawable/ic_arrow_upward_black_18dp"/>

                <Button
                    android:id="@+id/filter_by_difficulty_he"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Difficulty"
                    android:drawableRight="@drawable/ic_arrow_downward_black_18dp"
                    android:textColor="@android:color/holo_blue_light" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>